2017-12-05  Nikita Vasilyev  <nvasilyev@apple.com>

        Web Inspector: Styles: make Computed a top-level sidebar tab
        https://bugs.webkit.org/show_bug.cgi?id=174229
        <rdar://problem/33170193>

        Reviewed by Matt Baker.

        Styles dropdown tab selector was removed. Styles and Computed are now top-level sidebar tabs.

        Visual styles is no longer visible in the Styles sidebar tabs by default but can be enabled in the settings.

        * Localizations/en.lproj/localizedStrings.js:
        * UserInterface/Base/Setting.js:
        * UserInterface/Main.html:
        * UserInterface/Views/CSSStyleDeclarationSection.js:
        (WI.CSSStyleDeclarationSection.prototype.findMatchingPropertiesAndSelectors):
        * UserInterface/Views/CSSStyleDeclarationTextEditor.js:
        (WI.CSSStyleDeclarationTextEditor.prototype.findMatchingProperties):
        (WI.CSSStyleDeclarationTextEditor.prototype.removeNonMatchingProperties):
        * UserInterface/Views/ComputedStyleDetailsSidebarPanel.js: Added.
        (WI.ComputedStyleDetailsSidebarPanel):
        * UserInterface/Views/DOMTreeOutline.js:
        (WI.DOMTreeOutline.prototype._ondragover):
        (WI.DOMTreeOutline.prototype._ondrop):
        * UserInterface/Views/ElementsTabContentView.js:
        (WI.ElementsTabContentView):
        * UserInterface/Views/GeneralStyleDetailsSidebarPanel.css: Renamed from Source/WebInspectorUI/UserInterface/Views/CSSStyleDetailsSidebarPanel.css.
        * UserInterface/Views/GeneralStyleDetailsSidebarPanel.js: Renamed from Source/WebInspectorUI/UserInterface/Views/CSSStyleDetailsSidebarPanel.js.
        (WI.GeneralStyleDetailsSidebarPanel):
        (WI.GeneralStyleDetailsSidebarPanel.prototype.get panel):
        (WI.GeneralStyleDetailsSidebarPanel.prototype.visibilityDidChange):
        (WI.GeneralStyleDetailsSidebarPanel.prototype.computedStyleDetailsPanelShowProperty):
        (WI.GeneralStyleDetailsSidebarPanel.prototype.layout):